----------------------------------------------------------------------
 OmegaT 2.0.5 update 1
----------------------------------------------------------------------
  6 Enhancements
  3 Bugfixes
----------------------------------------------------------------------
2.0.5 update 1 vs. 2.0.5

  Implemented requests:

  - Document proxy setting
  http://sourceforge.net/support/tracker.php?aid=1878073

  Other enhancements:

  - Turkish localisation updated to 2.0.5 (UI, Readme, Instant Start)
  - Slovenian localisation updated to 2.0.5 (documentation)
  
  - Change pseudo-translated TMX parameter and documentation

  - Hunspell for Linux 64-bit updated to 1.2.8

  - Images are included in the minimal localisation pack 

  Bug Fixes:

  - Various corrections in the manual

  - sh tutorial in English
  http://sourceforge.net/support/tracker.php?aid=1895401

  - The /gen folder was not included in the source package

----------------------------------------------------------------------
 OmegaT 2.0.5
----------------------------------------------------------------------
  2 Enhancements
  0 Bugfix
----------------------------------------------------------------------
2.0.5 vs. 2.0.4 update 1

  Other enhancements:

  - Revised manual

  - Generate pseudo-translated tmx
  (see documentation->translation memories->pseudo-translated memory)

----------------------------------------------------------------------
 OmegaT 2.0.4 update 1
----------------------------------------------------------------------
  3 Enhancements
  1 Bugfix
----------------------------------------------------------------------
2.0.4 update 1 vs. 2.0.4


  Implemented requests:

  - Read existing translations from source PO documents
  http://sourceforge.net/support/tracker.php?aid=2862687

  Other enhancements:
  - German localisation updated to 2.0.3 (UI, Readme, Instant Start, Documentation)
  - Japanese localisation updated to 2.0.4 (UI, Instant Start)

  Bug Fixes:
