@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 2.0.5 update 1
 ----------------------------------------------------------------------
-  6 Enhancements
+  7 Enhancements
   3 Bugfixes
 ----------------------------------------------------------------------
 2.0.5 update 1 vs. 2.0.5
@@ -20,7 +20,9 @@
 
   - Hunspell for Linux 64-bit updated to 1.2.8
 
-  - Images are included in the minimal localisation pack 
+  - Images are included in the minimal localisation pack
+
+  - <wp:align> tags are hidden in the OpenXML filter 
 
   Bug Fixes:
 
